<resources>
    <string name="songtime">00:00 mn/s</string>
    <string name="debutRec">Starting recording</string>
    <string name="finRec">Ending Recording</string>
    <string name="textrecordVoice">Record the mic</string>
    <string name="textlistVoice">Mic\'s Records</string>
    <string name="textlistPhone">Call\'s Records</string>
    <string name="textstopVoice">Stop Mic</string>
    <string name="tableId">ID</string>
    <string name="tableNumero">Number</string>
    <string name="tableSens">Sense</string>
    <string name="tableHeure">Date</string>
    <string name="start_recording">Starting Recording</string>
    <string name="stop_recording">Stopping Recording</string>
    <string name="foreground_service_started">Voice Media Recorder started!</string>
    <string name="notification_wav_title">Wav service running</string>
    <string name="notification_wav_text">The Wav service is currently running</string>
    <string name="notification_3gp_title">3gp service running</string>
    <string name="notification_3gp_text">The 3gp service is currently running</string>
    <string name="notification_mp3_title">Mp3 service running</string>
    <string name="notification_mp3_text">The Mp3 service is currently running</string>
    <string name="notification_ogg_title">Ogg service running</string>
    <string name="notification_ogg_text">The Ogg service is currently running</string>
    <string name="multi_select_mode">Enable Multi Selection</string>
    <string name="action_bar_share_with">Share with…</string>
    <string name="qaction_select_all">Select All</string>
    <string name="qaction_delete">Delete</string>
    <string name="qaction_share">Share</string>
    <string name="qaction_share_sc">SoundCloud</string>
    <string name="qaction_done">OK</string>
    <string name="encode_while">Encode while recording</string>
    <string name="encode_after">Encode after recording</string>
    <string name="audio_encoder_handler">Audio Encoding Handler</string>
    <string name="select_encoding_method">Select encoding process</string>
    <string name="encoding_title">Few Device\'s resources ?</string>
    <string name="encoding_summary">Split recording process into two steps!</string>
    <string name="encoding_data">Encoding Audio data…</string>
    <string name="action_not_allowed">Action not allowed!</string>
    <string name="record_on_recording">Impossible to run recording service \ntwice at the same time!</string>
    <string name="bad_mp3_version">Your MP3 plugin is outdated, please update!</string>
    <string name="bad_ogg_version">Your OGG plugin is outdated, please update!</string>
    <string name="descriptionVoix">Voice Recorder</string>
    <string name="desriptionListV">Voices\' Records List</string>
    <string name="descriptionListeP">Calls\' Records List</string>
    <string name="desriptionListSet">Settings</string>
    <string name="excludedFromRecordingList_desc">Excluded Contacts from recording\'s service</string>
    <string name="loading">Fetching data, please wait…</string>
    <string name="gplay_title">Google Play</string>
    <string name="gplay_no_match">No match found!</string>
    <string name="ok">OK</string>
    <string name="plug_mp3_link">org.proofs.recorder.codec.mp3</string>
    <string name="plug_ogg_link">org.proofs.recorder.codec.ogg</string>
    <string name="plug_ftp_link">ftp_link</string>
    <string name="plug_mp3_title">MP3 Audio Engine</string>
    <string name="plug_ogg_title">OGG Audio Engine</string>
    <string name="plug_ftp_title">FTP Data Transport</string>
    <string name="plug_mp3_txt">
        This plugins allows you to record 
        through high quality and compressed audio stream
        via MP3 codec implementation.
    </string>
    <string name="plug_ogg_txt">
		This plugins allows you to record 
        through high quality and compressed audio stream
        via OGG codec implementation.
	</string>
    <string name="plug_ftp_txt">
        This plugins allows you to synchronize 
        your voice and call records to your own server 
        via FTP transport.
        All records with embbed information ensuring complete transparency.
	</string>
    <string name="gdevApiKey">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAzlJHQPCfccFjpEBQPG29jnh18AWwDqovEKOOZ4ms2aYWvoUUabaJT3NPCJ9XlgQYhB7wsC9ZYt9jHZBYX+WbMJ1XJs14EoNbWIJYK2urIbNTYGd2yjH4bE0irf7AYmLchuOfO3AJzdUi0LYbY7A+LS+CGSOSTCNGlRFzsWAEqF0phQudbYE4rzyPNxs8wj192sI188GYiPhTAv77yVcqI8ppnaaVCDpq7XY+g4IunoltTg9Xtz6h5m/Upr44kLmjB1FPM0rvAe75EW2uXXjImXQKCxLhZy6Q07uMqSwXpc6shnLr9OifzbQI3zpxfPStoTmmcc3MmfuMdLIoueShPwIDAQAB</string>
    <string name="google_analytics_ua">UA\-33072114\-1</string>
    <string name="unlicensed_dialog_title">You must have a licence</string>
    <string name="unlicensed_dialog_retry_body">Retry ?</string>
    <string name="unlicensed_dialog_body">Your Licence has expired!</string>
    <string name="retry_button">new try</string>
    <string name="buy_button">Upgrade</string>
    <string name="quit_button">Quit</string>
    <string name="checking_license">Checking Licence</string>
    <string name="application_error">A problem occur</string>
    <string name="dont_allow">Permission refused</string>
    <string name="allow">Permission authorized</string>
    <string name="ab_contacts_list_text">Contacts\' List</string>
    <string name="ab_contacts_list_icon_desc">Contacts icons</string>
    <string name="ab_default_text">Frug\'n Frog\'s Apps :)</string>
    <string name="dlgmenu_img_desc">Action Bar icon (cd)</string>
    <string name="eula_title">Licence Contract</string>
    <string name="eula_accept">Accept</string>
    <string name="eula_refuse">Refuse</string>
    <string name="condition_eula">Licence</string>
    <string name="summary_checkbox_EULA_SUM">Accept the terms of use</string>
    <string name="title_checkbox_EULA_TITLE">License</string>
    <string name="footer">Proof Recorder</string>
    <string name="app_name">Phone &amp; Voice Recorder</string>
    <string name="enregistreDebut">recording Starting</string>
    <string name="enregistreFin">recording ending</string>
    <string name="title_checkbox_speaker">Speaker Active ?</string>
    <string name="summary_checkbox_speaker">Needed for a good recording quality</string>
    <string name="arrow_record">arrow image</string>
    <string name="dialog_based_phonePrefs">Communications</string>
    <string name="dialog_based_phonePrefs_ergo">Security and Ergonomy</string>
    <string name="dialog_based_audoiSourcePrefs">Audio Source</string>
    <string name="dialog_based_audoiSourceBestConf">Set the best configuration</string>
    <string name="summary_checkbox_NOTIFICATION">Activate / Deactivate application\'s notifications</string>
    <string name="summary_checkbox_UAC_ASSISTED">Activate / Deactivate control options on deleting actions (alerts dialog)</string>
    <string name="title_checkbox_NOTIFICATION">Notify main Actions ?</string>
    <string name="title_checkbox_UAC_ASSISTED">Display Alerts ?</string>
    <string name="summary_checkbox_OUTCALL">Record Outcomming Calls</string>
    <string name="summary_checkbox_INCALL">Record Incomming Calls</string>
    <string name="title_checkbox_OUTCALL">Outcomming Calls</string>
    <string name="title_checkbox_INCALL">Incomming Calls</string>
    <string name="summary_checkbox_BESTCONF">Detected:\nBest theorical audio source</string>
    <string name="title_checkbox_BESTCONF">Discovered Sources</string>
    <string name="summary_checkbox_MIC">Optimized Source:\nMicrophone</string>
    <string name="summary_checkbox_VOICE_CALL">Optimized Source:\nVocals Calls</string>
    <string name="title_checkbox_MIC">Microphone</string>
    <string name="title_checkbox_VOICE_CALL">Voice</string>
    <string name="summary_checkbox_VOICE_RECO">Optimized Source:\nVoice Recognition</string>
    <string name="summary_checkbox_VOICE_COM">Optimized Source:\nPhone Call Conversations</string>
    <string name="title_checkbox_VOICE_RECO">Reconnaissance Vocale</string>
    <string name="title_checkbox_VOICE_COM">Conversations</string>
    <string name="summary_checkbox_VOICE_UP">Optimized Source:\nYour Voice</string>
    <string name="summary_checkbox_VOICE_DOWN">Optimized Source:\nCaller Voice</string>
    <string name="title_checkbox_VOICE_UP">Locale Voice (Tx)</string>
    <string name="title_checkbox_VOICE_DOWN">Caller Voice (Rx)</string>
    <string name="summary_checkbox_CAM">Optimized Source:\nFrontal Microphone</string>
    <string name="title_checkbox_CAM">Frontal Microphone</string>
    <string name="offers_options">Performances</string>
    <string name="offers_options_list">Partage</string>
    <string name="offers_dlg_title">Offres disponibles</string>
    <string name="summary_checkbox_OFFER_MP3">Plugin son mp3 gratuit(Free)</string>
    <string name="summary_checkbox_OFFER_OGG">Plugin son Ogg(Free)</string>
    <string name="summary_checkbox_OFFER_FTP">Plugin Ftp Sauvegarde Perso</string>
    <string name="summary_checkbox_OFFERS">Offres disponibles</string>
    <string name="title_checkbox_OFFER_MP3">Plugin son mp3</string>
    <string name="title_checkbox_OFFER_OGG">Plugin son Ogg</string>
    <string name="title_checkbox_OFFER_FTP">Plugin Ftp</string>
    <string name="extra_checkbox_INFORMATION">(peu ne pas fonctionner suivant les capacitées matériels du mobile)</string>
    <string name="enregistreNote">record</string>
    <string name="note_sup">delete</string>
    <string name="note_add">add</string>
    <string name="strHome">Home</string>
    <string name="strPlugins">Plugins</string>
    <string name="strCallRecords">Call Records</string>
    <string name="strVoiceRecords">Voice Records</string>
    <string name="strVoiceRecorder">Voice Recorder</string>
    <string name="strContactManager">Contact Manager</string>
    <string name="strGlobalSettings">Global Settings</string>
    <string name="strExcludedTab">Excluded Contacts</string>
    <string name="cm_records_list_del_file_txt">Delete</string>
    <string name="cm_records_list_read_wav_txt">Play</string>
    <string name="cm_records_list_details_txt">Display details</string>
    <string name="cm_records_list_sharing_opts_txt">Share</string>
    <string name="alert_dialog_ok">Validate</string>
    <string name="search_voice_records_choice">Voices Records</string>
    <string name="search_call_records_choice">Calls Records</string>
    <string name="search_by_date">By Date</string>
    <string name="search_run_search">Go Search</string>
    <string name="search_by_date_precise">For a precise date</string>
    <string name="search_by_date_period">For a period</string>
    <string name="search_by_date_period_start">Starting date</string>
    <string name="search_by_date_period_end">Ending date</string>
    <string name="search_by_date_validate">Validate</string>
    <string name="default_note_title">Insert a title note</string>
    <string name="voice_edit_dialog_msg">Add a title to this record ? If you wish to do it later, Go in the detail of the record, then in the Note\'s tab!</string>
    <string name="voice_edit_dialog_later_btn">Later</string>
    <string name="soundopt">Qualitée d\'enregistrement</string>
    <string name="echantillon">Fréquence d\'échantillonnage</string>
    <string name="hz">En hertz</string>
    <string name="vbr">Compression mp3</string>
    <string name="oggqual">Qualitée Ogg</string>
    <string name="oggtit">Qualitée du format Ogg</string>
    <string name="vbru">Kb/s</string>
    <string name="mp3c">Séléction de la Compression</string>
    <string name="checc">Séléction de l\'échantillonnage</string>
    <string name="dialog_based_phonePrefs_clean">Phone Calls Auto-cleaning</string>
    <string name="dlgtitle_list_auto_clean">Auto-cleaning</string>
    <string name="summary_list_auto_clean">Set your phone calls auto-cleaning, then decreasing disk space usage</string>
    <string name="title_list_auto_clean">Select period</string>
</resources>